src/objects/OneKey_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Exact_Search_Method__c</fullName>
        <description>Used to store EXACT as method</description>
        <label>Exact Search Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKey_ApiCode__c</fullName>
        <label>OneKey ApiCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKey_ApiName__c</fullName>
        <label>OneKey ApiName</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OneKey_CisCode__c</fullName>
        <label>OneKey CisCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKey_Password__c</fullName>
        <label>OneKey Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKey_Reply_To__c</fullName>
        <label>OneKey Reply To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKey_Request_1__c</fullName>
        <label>OneKey Request 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKey_Request_2__c</fullName>
        <label>OneKey Request 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKey_Request_3__c</fullName>
        <description>Used to store request for First name and Last name.</description>
        <label>OneKey Request 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKey_UserName__c</fullName>
        <label>OneKey UserName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phonetic_Search_Method__c</fullName>
        <description>Used to store PHONETIC</description>
        <label>Phonetic Search Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OneKey Config</label>
</CustomObject>